update: javascript 81.md

--- a/javascript/contents/81.md
+++ b/javascript/contents/81.md
@@ -35,116 +35,105 @@
 4） 单例模式展示：
 
 - 例子：使用单例模式来表示：Joh和Lily两个人之间通信的过程：
-
-```javascript
-
-var Joh = (function(argument){
-  // 内部有一个屋子对象
-  JohHouse = function(message) {
-    this.doorbell = message; // 门铃作为信息通道,这里门铃就代表了信息
-  };
-  var door; // 初始化一个门
-  var info = {
-    // 发送消息的方法
-    sendMessage:function(message){
-      // 这就是单例模式中的没有了创建，再返回
-      if(!door) {
-        door = new JohHouse(message);
+  ```javascript
+  var Joh = (function(argument){
+    // 内部有一个屋子对象
+    JohHouse = function(message) {
+      this.doorbell = message; // 门铃作为信息通道,这里门铃就代表了信息
+    };
+    var door; // 初始化一个门
+    var info = {
+      // 发送消息的方法
+      sendMessage:function(message){
+        // 这就是单例模式中的没有了创建，再返回
+        if(!door) {
+          door = new JohHouse(message);
+        }
+        return door;
       }
-      return door;
+    };
+    return info; // Joh 就是这个 info
+  })();
+
+  var Lily = {
+    callJoh:function(msg) {
+      var door = Joh.sendMessage(msg); // 此处sendMessage函数是一个闭包
+      alert(door.doorbell);
+      door = null; // 用完回收
     }
-  };
-  return info; // Joh 就是这个 info
-})();
-
-var Lily = {
-  callJoh:function(msg) {
-    var door = Joh.sendMessage(msg); // 此处sendMessage函数是一个闭包
-    alert(door.doorbell);
-    door = null; // 用完回收
   }
-}
 
-Lily.callJoh('I am coming!'); // 弹出 I am coming!
-
-```
-
+  Lily.callJoh('I am coming!'); // 弹出 I am coming!
+  ```
 
 - 例子2：页面上按钮之间的通信
-
+  * 页面上有6个元素：a,b,c,d,e,f
+  * 我们分类：a,b,c属于topBar, d,e,f属于banner
+  * 实现topBar组和banner组的通信案例
+  * topBar实现修改自身值
+  * banner实现修改topBar中的值
 ```html
 <div class='topBar'>
   <button id='a'>A</button>
 </div>
 
 <div class='banner'>
-  <button id='b'>B</button>
+  <button id='d'>B</button>
 </div>
+
+<script>
+    var topBar = {
+        init: function() {
+            this.render();
+            this.bind();
+        },
+        val: 4,
+        render: function() {
+            var me = this;
+            me.btna = document.getElementById('a');
+        },
+        bind: function() {
+            var me = this;
+            me.btna.addEventListener('click', function() {
+                // 函数内的this指代按钮了，内部不能用this
+                me.change(); // 修改val的值
+                alert(me.val); // 弹出5
+            });
+        },
+        change: function() {
+            this.val = 5;
+        }
+    }
+
+    var banner = {
+        init: function() {
+            this.render();
+            this.bind();
+        },
+        val: 4,
+        render: function() {
+            var me = this;
+            me.btnd = document.getElementById('d');
+        },
+        bind: function() {
+            var me = this;
+            me.btnd.addEventListener('click', function() {
+                // 函数内的this指代按钮了，内部不能用this
+                me.change(); // 修改val的值
+                alert(top.val); // 弹出6
+            });
+        },
+        change: function() {
+            top.val = 6; // 实现和top的通讯
+        }
+    }
+
+    topBar.init();
+    banner.init();
+</script>
 ```
 
-```javascript
-var topBar = {
-  init:function() {
-    this.render();
-    this.bind();
-  },
-  a:4,
-  // render 函数用于获取页面元素
-  render:function(){
-    this.btnA = document.getElementById('a');
-  },
-  // bind 函数用于绑定事件
-  bind:function() {
-    var me = this;
-    // 绑定点击事件 更新自身
-    this.btnA.onclick = function () {
-      me.change();
-      console.log(me.a); // 输出当前的a
-    }
-  },
-  change:function() {
-    this.a = 5;
-  }
-};
+### 总结
 
-var banner = {
-  init:function() {
-    this.render();
-    this.bind();
-  },
-  // render 函数用于获取页面元素
-  render:function(){
-    this.btnB = document.getElementById('b');
-  },
-  // bind 函数用于绑定事件
-  bind:function() {
-    var me = this;
-    this.btnB.onclick = function () {
-      me.change();
-    }
-  },
-  change:function() {
-    console.log('topBar.a before: ', topBar.a);
-    topBar.a = 40;
-    console.log('topBar.a after: ', topBar.a);
-  }
-};
-
-topBar.init();
-console.log(topBar.a); // 8
-
-banner.init();
-```
-
-上面的例子中的举例步骤是：
-
-- 页面初始化时输出4
-- 点击A时输出5
-- 再点击B时输出：
- ```
- topBar.a before:  5
- topBar.a after:  40
- 
- ```
-
-通过单例模式可以做到组件间的通信，全局作用域中只有一个实例，还可以做到实例间的通信。
+- 通过单例模式可以做到组件间的通信
+- 全局作用域中只有一个实例，还可以做到实例间的通信
