update: javascript 81.md

--- a/javascript/contents/81.md
+++ b/javascript/contents/81.md
@@ -12,22 +12,22 @@
 - __接口隔离原则__：每一个接口应该是一种角色，职责单一，互不影响。比如：每把钥匙开一把锁。
 - __合成/聚合复用原则__：新的对象应该使用一些已有的对象，使之成为新对象的一部分，比如：手里有一些相机的零件，而又去买了一个新的相机。
 - __迪米特原则__：一个对象应对其他对象有尽可能少的了解，也就是高内聚，低耦合，尽可能减少组件之间的联系，解耦合。比如：不要把牙刷和鞋刷搞在一起。
-
-总之，通过设计模式的这些原则，就可以站在巨人的肩膀上Hold住系统架构。
+- 总之，通过设计模式的这些原则，就可以站在巨人的肩膀上Hold住系统架构。
 
 ## 设计模式之单例模式
 
-1） 单例模式是什么？
+1 ） 单例模式是什么？
 
 单例就是保证一个类只有一个实例，实现的方法一般是先判断实例存在与否，如果存在直接返回，如果不存在，创建了再返回，这就确保一个类只有一个实例对象，在js中，单例作为一个命名空间提供者，从全局命名空间里提供一个唯一的访问点来访问该对象。
 
-2） 单例模式的作用：
+2 ） 单例模式的作用
 
 - 模块之间通信
 - 系统中某个类的对象只能存在一个
 - 保护自己的属性和方法
 
-3） 单例模式中的注意事项：
+3 ） 单例模式中的注意事项
+
 - 注意this的使用
 - 注意闭包容易造成内存泄露，不需要的要赶快回收
 - 注意new的成本，比如：直接声明一个字面量的形式来初始化字符串比通过`new String()`的方式成本要低
