update: javascript 81.md

--- a/javascript/contents/81.md
+++ b/javascript/contents/81.md
@@ -67,7 +67,7 @@
   ```
 
 - 例子2：页面上按钮之间的通信
-  * 页面上有6个元素：a,b,c,d,e,f
+  * 页面上有6个按钮元素：a,b,c,d,e,f
   * 我们分类：a,b,c属于topBar, d,e,f属于banner
   * 实现topBar组和banner组的通信案例
   * topBar实现修改自身值
