update: javascript 82.md

--- a/javascript/contents/82.md
+++ b/javascript/contents/82.md
@@ -8,68 +8,98 @@
 2. 第一次声明的时候给对象赋值。
 3. 自己声明构造函数，赋予属性和方法。
 
-## 构造函数模式的注意事项：
+## 构造函数模式的注意事项
 
 1. 声明函数时处理业务逻辑
-2. 区分和单例的差别，配合单例实现初始化化
+2. 区分和单例的差别，配合单例实现初始化
 3. 构造函数大写字母开头 (建议)
 4. 注意new的成本 (继承问题，比如公用的函数放到原型中)
 
 ## 构造模式的实现
 
-```javascript
-function Door(lock,color) {
-  this.lock = lock || 'new lock';    
-  this.color = color || 'red';
+1 ) 构造函数的单独使用
 
-  this.create = function () {
-    return 'lock: ' + this.lock + '; color: ' + this.color;
+- 我们通过一个自然世界的门来进行简单的实现
+- 门有两个属性：锁，花纹
+- 门有一个方法：造门
+  ```javascript
+  function Door() {
+      this.lock = '普通';
+      this.lines = '普通';
+      this.create = function() {
+          return '【锁】：' + this.lock + ' | 【花纹】：' + this.lines;
+      }
   }
-}
+  var d1 = new Door();
+  console.log('d1: ' + d1.create()); // d1: 【锁】：普通 | 【花纹】：普通
 
-var door1 = new Door('old lock', 'black');
-var res1 = door1.create();
-console.log(res1);
-
-var door2 = new Door('fancy lock', 'brown');
-var res2 = door2.create();
-console.log(res2);
-
-```
-
-## 构造模式和单例模式的结合使用
-
-这里模拟AA厂商和BB厂商都造门
-
-```javascript
-// AA 厂商
-var AA = {
-  door: function (lock,color) {
-    this.lock = lock || 'new lock';    
-    this.color = color || 'red';
-
-    this.create = function () {
-      return 'lock: ' + this.lock + '; color: ' + this.color;
-    }
+  // 如果不使用new来创建实例，那么可以这样写, 内部进行new
+  function Door2() {
+      // 注意取非后的表达式括号
+      if (!(this instanceof Door2)) {
+          return new Door2();
+      }
+      this.lock = '普通';
+      this.lines = '普通';
+      this.create = function() {
+          return '【锁】：' + this.lock + ' | 【花纹】：' + this.lines;
+      }
   }
-}
+  var d2 = Door2(); // 这时候支持new或者不new
+  console.log('d2: ' + d2.create()); // d2: 【锁】：普通 | 【花纹】：普通
 
-// BB 厂商
-var BB = {
-  door: function (lock,color) {
-    this.lock = lock || 'new lock';    
-    this.color = color || 'red';
-
-    this.create = function () {
-      return 'lock: ' + this.lock + '; color: ' + this.color;
-    }
+  // 如果不使用new来创建实例，那么可以这样写, 内部进行new
+  function Door3(lines) {
+      // 注意取非后的表达式括号
+      if (!(this instanceof Door3)) {
+          return new Door3(lines);
+      }
+      this.lock = '普通';
+      this.lines = lines || '普通';
+      this.create = function() {
+          return '【锁】：' + this.lock + ' | 【花纹】：' + this.lines;
+      }
   }
-}
+  var d3 = Door3('条丝花纹');
+  console.log('d3: ' + d3.create()); // d3: 【锁】：普通 | 【花纹】：条丝花纹
+  ```
 
-var aaDoor = new AA.door('AA good', 'red');
-var bbDoor = new BB.door('BB good', 'yellow');
+2 ) 构造模式和单例模式的结合使用
 
-console.log(aaDoor.create()); // lock: AA good; color: red
-console.log(bbDoor.create()); // lock: BB good; color: yellow
+- 通过门与厂商的结合进行实现
+- 这里门的厂商有两个：A, B
+  ```javascript
+  var A = {
+      Door: function() {
+          // 注意取非后的表达式括号
+          if (!(this instanceof A.Door)) {
+              return new A.Door();
+          }
+          this.lock = '普通';
+          this.lines = '普通';
+          this.create = function() {
+              return '【锁】：' + this.lock + ' | 【花纹】：' + this.lines;
+          }
+      }
+  }
 
-```
+  var B = {
+      Door: function(lines) {
+          // 注意取非后的表达式括号
+          if (!(this instanceof B.Door)) {
+              return new B.Door(lines);
+          }
+          this.lock = '普通';
+          this.lines = lines || '普通';
+          this.create = function() {
+              return '【锁】：' + this.lock + ' | 【花纹】：' + this.lines;
+          }
+      }
+  }
+
+  var a = A.Door();
+  console.log('a: ' + a.create()); // a: 【锁】：普通 | 【花纹】：普通
+
+  var b = B.Door('条丝花纹');
+  console.log('b: ' + b.create()); // b: 【锁】：普通 | 【花纹】：条丝花纹
+  ```
