--- a/javascript/contents/83.md
+++ b/javascript/contents/83.md
@@ -1,66 +1,74 @@
 ## 建造者模式
 
 > 建造者模式将一个复杂对象的构建和其表示相分离，使得同样的构建过程可以创建不同的表示。也就是说如果我们用了建造者模式，那么用户就需要制定需要建造的类型就可以得到他们，而具体建造的过程和细节就不需要知道了，建造者模式实际上，就是一个指挥者，一个建造者，一个指挥者调用具体建造者工作得出结果的客户。
-> 建造者模式主要用于"分步骤构建一个复杂的对象"，在这其中"分步骤"是一个稳定的算法，而复杂对象的各个部分则经常变化。
+> 建造者模式主要用于"分步骤构建一个复杂的对象"，在这其中"分步骤"是一个稳定的算法框架，而复杂对象的各个部分则经常变化。
+> 用一句话来总结就是指挥者分配任务，建造者进行开发，各司其职，稳定在大的流程里分步构建。
 
 ## 建造者模式的作用
 
-1. 分步创建一个复杂的对象 (建房子的过程：客户交给包工头，包工头监督工人，工人施工建造 这样分步骤，而内部又会有很多步骤)
-2. 解耦封装过程和具体创建的组件 (每个过程或组件都是互不干扰的，各自独立，职责单一)
-3. 无需关心组件如何组装。(客户想要房子，不需要关心房子内部的每个结构是如何建造的)
+1. 分步创建一个复杂的对象 (建房子的过程：客户交给包工头，包工头监督工人，工人施工建造，这样分步骤，而内部又会有很多步骤)
+2. 流程解耦，封装过程和具体创建的组件 (每个过程或组件都是互不干扰的，各自独立，职责单一)
+3. 无需关心组件如何组装 (客户想要房子，不需要关心房子内部的每个结构是如何建造的)
 
 ## 建造者模式的注意事项
 
-1. 一定要一个稳定的算法进行支持。(契约，合同和整体框架)
-2. 加工工艺是暴露的。(客户和工人之间可以对话，客户和包工头之间也可以对话)
+1. 一定要一个稳定的算法进行支持 (契约，合同和整体框架)
+2. 加工工艺是暴露的 (客户和工人之间可以对话，客户和包工头之间也可以对话)
 
 ## 建造者模式的应用
 
-举例客户想要房子，客户通过包工头，包工头来指挥工人盖房子, 在这里包工头相当于一个接口，比如电视机的开关按钮，通过这个按钮指挥电视机的状态。
-
-```javascript
-// 房子
-function House() {
-  this.bedRoom = "";
-  this.livingRoom = "";
-  this.kitchen = "";
-}
-
-// 监工
-function Overseer() {
-  // 指挥盖房子
-  this.conductCreateHouse = function (worker) {
-    worker.createBedRoom();
-    worker.createLivingRoom();
-    worker.createKitchen();
-  };
-
-  // 交房子
-  this.handOverHouse = function() {
-    var house = new House();
-    house.bedRoom = 'ok'; // 验工 合格
-    house.livingRoom = 'ok'; // 验工 合格
-    house.kitchen = 'ok'; // 验工 合格
-    return house;
+- 在jQuery中有很多常见的建造者模式
+  * 当我们使用$.ajax发送请求时就是一个建造者模式
+  * 这里面的老板就是开发者, 包工头就是$.ajax
+  * 工人就是里面负责发送请求内部的一些处理方法，以及成功，失败等一系列的回调函数
+  * 还有jQuery中的封装Dom,从js原生Dom到jQuery Dom的封装, 封装后的可以调用的方法等
+- 举例客户想要房子，客户通过包工头来盖房子
+  * 包工头来指挥工人盖房子, 在这里包工头相当于一个接口
+  * 就好比电视机的开关按钮，通过这个按钮指挥电视机的状态
+  * 示例代码如下
+  ```javascript
+  // 房子
+  function House() {
+    this.bedRoom = "";
+    this.livingRoom = "";
+    this.kitchen = "";
   }
-}
 
-// 工人
-function Worker() {
-  this.createBedRoom = function() {
-    console.log('bedRoom is ok');
-  };
-  this.createLivingRoom = function() {
-    console.log('livingRoom is ok');
-  };
-  this.createKitchen = function() {
-    console.log('kitchen is ok');
-  };
-}
+  // 监工
+  function Overseer() {
+    // 指挥盖房子
+    this.conductCreateHouse = function (worker) {
+      worker.createBedRoom();
+      worker.createLivingRoom();
+      worker.createKitchen();
+    };
 
-var worker = new Worker();
-var overseer = new Overseer();
-overseer.conductCreateHouse(worker);
-var house = overseer.handOverHouse(); 
-console.log(house);
-```
+    // 交房子
+    this.handOverHouse = function() {
+      var house = new House();
+      house.bedRoom = 'ok'; // 验工 合格
+      house.livingRoom = 'ok'; // 验工 合格
+      house.kitchen = 'ok'; // 验工 合格
+      return house;
+    }
+  }
+
+  // 工人
+  function Worker() {
+    this.createBedRoom = function() {
+      console.log('bedRoom is ok');
+    };
+    this.createLivingRoom = function() {
+      console.log('livingRoom is ok');
+    };
+    this.createKitchen = function() {
+      console.log('kitchen is ok');
+    };
+  }
+
+  var worker = new Worker();
+  var overseer = new Overseer();
+  overseer.conductCreateHouse(worker);
+  var house = overseer.handOverHouse(); 
+  console.log(house);
+  ```
