update: javascript 84.md

--- a/javascript/contents/84.md
+++ b/javascript/contents/84.md
@@ -1,49 +1,60 @@
 ## 工厂模式
 
-> 工厂模式定义一个用于创建对象的接口，这个接口由子类决定实例化哪一个类。该模式使一个类的实例化延迟到了子类。而子类可以重写接口方法以便创建的时候制定自己的对象类型(抽象工厂)
+> 工厂模式定义一个用于创建对象的接口，这个接口由子类(可以理解为产品线)决定实例化哪一个类(生产衣服还是鞋子)
+> 该模式使一个类的实例化延迟到了子类，也就是很多产品线在工厂里，当用的时候才告诉产品线干活
+> 而子类可以重写接口方法(比如修改造鞋流程)以便创建的时候指定自己的对象类型(抽象工厂)
+> 这个模式十分有用，尤其是创建对象的流程赋值的时候(比如造鞋的流程)，如依赖于很多设置文件(鞋子依赖哪些原材料, 不同的环境配置)等
+> 并且，你会经常在程序里看到工厂方法，用于让子类定义需要创建的对象类型，也就是生产单例
 
 ## 工厂模式的作用
 
-- 对象的构建十分复杂
+- 用于对象的构建十分复杂
 - 需要依赖具体的环境创建不同的实例
-- 处理大量具有相同属性的小对象
+- 处理大量具有相同属性的小对象，也就是批量生产
 
 ## 工厂模式的注意事项
 
 - 不能滥用工厂，仅仅会给代码增加复杂度
+- 注意工厂模式的适用场景
 
 ## 工厂模式的实现
 
-简单工厂的实现
+1 ) 简单工厂的实现
 
 ```javascript
 // 工厂对象
 var factory = {};
+
+// 生产衣服
 factory.createClothes = function(){
   this.workers = 30;
   console.log('clothes ok');
 };
+
+// 生产鞋子
 factory.createShoes = function(){
   this.workers = 100;
   console.log('shoes ok');
 };
-factory.transport = function () {
-  this.cars = 5;
+
+// 运输工具
+factory.transport = function (type) {
+  // 模拟根据不同环境使用不同数量的汽车
+  this.cars = type ? 5 : 6;
   console.log('transport ok');
 }
 
-// 工程中的厂长
-factory.director = function (params) {
+// 厂长
+factory.director = function (params, type) {
   // 厂长发布命令去造一条生产线或运输线
-  return new factory[params]();
+  return new factory[params](type);
 }
 
-var transportStuff = factory.director('transport');
+var transportStuff = factory.director('transport', 1);
 console.log(transportStuff.cars); // 5
-
 ```
 
-抽象工厂的实现
+2 ) 抽象工厂的实现
 
 ```javascript
 // 抽象工厂的实现 打个比方：大厂
@@ -57,7 +68,7 @@ AbstractFactory.prototype = {
 
 // 子类的小厂 
 var SmallFactory = function () {
-  AbstractFactory.call(this);
+  AbstractFactory.call(this); // 以此继承抽象工厂
 }
 // 这里继承父类
 SmallFactory.prototype = new AbstractFactory();
@@ -66,5 +77,6 @@ SmallFactory.prototype.constructor = SmallFactory; // 将constructor指向自身
 SmallFactory.prototype.createFactory = function () {
   console.log('small');
 }
-
 ```
+
+- 简单工厂和抽象工厂的区别：抽象工厂只实现接口，让子类(简单工厂)来继承和实现
