--- a/dsa/contents/34.md
+++ b/dsa/contents/34.md
@@ -99,4 +99,139 @@ void Graph<Tv, Te>::BFS(int v, int & clock) {
     <br />
 </div>
 
-- 绿实线是TREE EDGE，黄虚线是CROSS(为什么叫CROSS,因为它试图连接出一个环出来，这个在树中是禁忌的)
+- 上图橙色圆角框代表的是队列，入队的元素是红色的，出队的元素是蓝色的，并且用橙色圆角矩形存储
+- 需要注意的是，上述过程中举个例子来说明，当点燃到a的时候，a需要去寻找它的外层邻居，如上图有e和c
+- 但是c早已经在s化成灰烬前入队了, 也就是说c是s的外层邻居
+- 所以到a的时候，有效的外层邻居只有e, 因为a-c这条路径会构成一条CROSS边
+- 绿实线是TREE EDGE，黄虚线是CROSS
+    * 上图中可见, 从s-d, s-c, s-a, a-e等绿色的线条都是TREE EDGE
+    * 为什么叫黄色的叫CROSS, 因为它试图连接出一个环出来，这个在树中是禁忌的
+- BFS大概就是上述这么一个过程
+
+**BFS: Shortest Distance/Path 最短路径问题**
+
+- BFS有个特点，叫做最短距离，这个和之前我们聊过Dijkstra算法(比较的复杂)有类似之处
+- Dijkstra算法更复杂的原因是图中的每一条边都是有权重的，从某一点开始到其它点的最短距离以及相应的路径
+- BFS的简单在于各向同性，每条边的权重相等，每条边都对应一单位的时间，这种情况下，这个最短距离是怎样的呢
+- 同Dijkstra算法一样，我们也可以使用同样的模拟，将BFS图中可燃烧的点作为珠子，以边作为丝线，这些边都是等长的
+- 把这个图平摊在桌子上，拎起一点如s点，一秒一秒的匀速向上提起，在这个过程中，所有的这些点在这个图的意义下
+- 按照它到s的最短距离，依次的被抬离桌面，因为我们的边是等长的，所以在同一个前锋面上的点会同时被拎起来
+- 第一圈(圈即前锋面)，第二圈，第三圈... 这样，按照这个过程，我们得到了一棵以s为树根, 绿色为边的BFS Tree
+- 这棵树中每一条边中都代表火焰的有效传递，从起点s(火源开始)到任意一点(我们暂且称为t点)，相对于t点来说
+- 连接s到t的这条被拎起来的树中路径，都是t到树根s的最短路径，如下图所示，灰色都是Cross边，绿色是燃烧路径
+
+<div align="center">
+    <img width="600" src="./screenshot/148.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 如上图所示，对于t点来说，起点是s, 从t到s的最短路径经过b点，那么对于b点来说，到起点s的最短路径
+- 一定是以b为起点，t-s路径的前缀: b-s, 燃烧模型中的火焰会沿着最短路径进行传播
+- 上述平摊拎起模型中绷直的绳子也一定是沿着最短路径来绷直，也就是火焰的传播方向
+
+**BFS: Bipartite Graph (Bigraph) 二部图**
+
+- BFS的一个应用就是所谓的二部图，这个和最小支撑树的时候的"割"的概念很像
+- 如果有一个图存在某一个割，而且使得在这个割的意义下，无论在蓝边的这一部分还是红边的一部分
+- 内部的点之间没有连边，两部分唯一的连边，就是连接红的和蓝的，就是跨越这两个之间的所有的那些桥
+- 每一条边都是在这个割的意义下的那些跨边或者叫做桥，可以用磁铁南北极来比喻，异极相吸，同极相斥
+- 可以把蓝色理解为南极, 红色理解为北极, 蓝色永远不会和蓝色连边，红色永远不会和红色连边
+- 这就是一个二部图，好，现在的问题来了，如果有这么一个图给你，最开始的时候是乱的，分不清所有的蓝和红
+- 怎么来断定这个图是一个二部图，也就是说它存在这样的一个割，能够把红的和蓝的，两个截然划分
+- 只有它们互相之间的连边(包括孤零零的未与任何异色连接的点这种情况)，只是不能允许同色相连，怎么判断呢？
+- 这时候，我们就要用到我们的BFS模型，如下图，左边是二部图，右边是BFS模型
+
+<div align="center">
+    <img width="600" src="./screenshot/149.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 方法比较简单，就是挑任何一个点, 比如上图中的s，不管它是红的还是蓝的，接下来，做一个BFS
+- 就像刚才我们拎着网兜一样，随着时间的流逝，第1秒，第2秒... 对应着一环(环即前锋面), 二环, ...
+- 这些绿色的边会逐个绷直，他们会被拉起来，按顺序离开桌面
+- 所谓的一环上的那些边，他们将会在第1个单位的时间，那个时刻，滴答响的那一声会被拎起来离开桌面
+- 这些边是到点s的最短距离，这些边上的点，比如上图标注的一环上的蓝色的点，如果真的将来能够构成一个二部图的话
+- 一定会跟s点异色，就像图上的红的和蓝的一样，其实一开始的起点s的指定是无所谓的，不失一般性，可以把它指定为红的
+- 因为二部图颜色可以互换的，如果真的是一个二部图的话，接下来被拎起来的点就一定是异色的
+- 如上图所示，一环上的一个蓝色的点被点着了，它又会去点燃别人，之所以能够点燃别人，是因为它有边相连
+- 而既然它有边相连，如果整体是一个二部图的话，所有的边都应该发生在不同的两部之间，也就是异色的点之间
+- 如果二环上的一些红点是被这个一环上某一个蓝色的点着的话，而整个图确实又是一个二部图的话
+- 那么这些在二环上的点唯一的可能就是它是红色的点，其他的也是如此，举一反三
+- 如果最开始是红的话，那么接下来，就会在下一秒钟点燃所有的蓝色，而蓝色点在下一秒钟又会点燃红色的点
+- 不断重复下去，红蓝，红蓝这样在秒数的奇偶意义下不断的翻转
+- 好，现在问题又来了，任何图都能做BFS，但任何图未必都是二部图，我们需要一个判定的准则
+- 其实，在这里我们除了要看绷直的竖边(绿色的边)，现在最重要的是看那些跨边(灰色的边)
+- 因为绷直绿边的最短性，关于灰色的跨边，在这个环路的意义上来说，它不会跨太远
+    * 比如说可能有的会在同一环上的跨边，就像刚才一个正在燃烧的点想要点着它的一个邻居
+    * 而那个邻居也正在燃烧，这是同一个环路上的点，我们叫做环路线，它们都是同色的
+    * 也可能，有一个点想要点燃在和自己同一环路线上的邻居刚刚点着了一个点
+    * 比如一环上有$A, B$两点, 二环上有$A', B'$两点, 理论上$A$会点燃$A'$, $B$会点燃$B'$
+    * 但是$A$想点燃$B'$, 实际上是无法操作的，这时候就会构成一个跨边
+    * 虽然在这个地方来说这两条边$AA'$和$AB'$是一样长，但在我们的算法里头，它是重复点的
+- 所以我们的Cross边实际上分为两类
+    * 一个是用环路上的，点燃自己同类的同一辈分的那些点，如$AB$，这是同色的跨边，在二部图中是严格被禁止的
+    * 另一个是试图去点燃本不该点燃的它下一层的点，如$AB'$，这是异色的跨边，在二部图中是允许的
+- 有没有可能会点燃更多的点，比如说一环的点去点燃三环和四环以及以上的点，答案肯定是不会的
+    * 在BFS的机制上，不管是自然的火的燃烧过程，还是网兜提拉离开桌面的模拟过程都不会这样的
+    * 因为如果真有那样的话，那这个点和它跨环点燃的那个点，就不应该和自己多两环，三环这样，而必然只能多一环，因为最短路径的性质
+- 因为$AB$这类跨边是严格禁止的，一旦发现这种同一环路上的跨边，算法就立即被终止
+- 这时候可以断定，这个图是不能够像二部图这样切开的，所以它就不是一个二部图
+- 反之，如果一直都能做下去，一直做来做去，都没有这种环线上的这种边，那么它自然也就构成了一个二部图
+- 以上是一个充要条件，虽然我们上述推理证明都不甚严格，但是其结果是正确的，也是很容易理解的
+
+**Graph/Tree: Eccentricity/Radius/Center/Diameter**
+
+- 对于图来说，还有一些概念比较重要
+    * Eccentricity 偏心距
+    * Radius 半径
+    * Center 中心
+    * Diameter 直径
+- 上述的概念是在圆中的概念，我们可以把它应用在图内
+- 基于BFS的平摊桌面模型，它的骨架实际是一棵树，节点之间的一些跨边被我们扔掉了
+- 这个时候对于任何一个节点来说，我们都可以来讨论他的偏心距(Eccentricity)
+    * 如果一张图上的中心点在某个节点上，比如O点，对于任意一个节点A来说，它都有个偏心距
+    * 直觉上，我们认为的偏心距应该是|OA|的距离，但是在图上并不好由此来测度，我们需要找一个替代的东西
+    * 我们可以以A为起点做一趟BFS, 就相当于从A点扔一个火源，让其自行燃烧
+    * 这时候它会一圈一圈地，就像在一个平静的湖面上一石激起层层浪一样形成涟漪
+    * 这个涟漪传递出去的过程，其实也在计时，并且在计距离，它们两个可以理解为一个概念
+    * 我们会知道这个涟漪沿着一个方向最终平复的那个位置，一定是这个图中最外层的一个节点，我们可以记为T
+    * 从A到T是沿一条最短路径过来的，相对来说消耗的时间也是最短时间
+    * 而整体来说，在向周围传播的过程中，因为位置和最短传播距离的原因，周围的一些地方会更早的被平息下来
+    * 我们把最后一个被平息下来的点，在这里我们不失一般性，可以记为T点
+    * 我们就把这样的一段传播距离，按照BFS模型，从A到T的传播距离，就记做偏心距(Eccentricity)
+    * 同时我们可以看到越是偏离图的中心，它的偏心距越长，这就是我们在图上的偏心距，一种替代方案
+    * 所以，任何一个点只要对它做一次BFS就会计算出它的偏心距
+- 同样的，我们可以讨论图上的中心(Center)
+    * 从人类直觉上来说，圆的中心就是最中心的那个点
+    * 对于图来说，我们可以认为偏心距最小的点就是图的中心
+    * 所以，对于图来说，它的中心很可能并不唯一
+    * 一般的来说在一个普通的图中，它的Center可能不止一个，为什么呢？
+        * 在这里每个点的偏心距都给他算出来，我们可以先验证一下，比如下图1中偏心距为4的点，至少要4s才能把离自己最远的最后一个点点着
+        * 偏心距为5的点，需要5个单位的时间(5s)，能够烧完全图
+        * 偏心距为3的点，只需3秒钟就把整个图烧完，偏心距为3的点是最小的偏心距，因此也是下图1的图中心有三个
+        * 如果一个图是一个匀称规整的环形结构，那么它的中心点的个数取决于节点的个数，即环上的所有点都是中心点
+        * 这样来说，一个图的中心点个数一般是<=n(n为节点数)，而正规的树(不会构成环路)的中心点的个数，一般是<=2，如下图1,2,3所示
+
+<div align="center">
+    <img width="500" src="./screenshot/150.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 而同样可知，图中心点的偏心距就是图的半径(Radius)
+- 总结一下
+      * 计算图中任何一点的偏心距，只要对其做一次BFS即可找出
+      * 计算图中的中心点，需要计算图中所有点的偏心距，找到最小的偏心距所对应的点
+      * 计算图中的半径，中心点所对应的偏心距即为半径
+- 最后，我们需要了解一下如何找到图中的直径(Diameter)
+    * 对于圆来说，它的半径恰好是自己直径的一半，反过来说直径是半径的两倍
+    * 但是在图中的直径并不是这样的，至少不见得总是自己半径的两倍，那什么是图的直径呢
+    * 其实就是图中距离最长的两个点之间的距离(或者说它们之间的那条通路)
+    * 在实际中，我们讨论直径更多的应用于树结构上，毕竟树是一种特殊的图结构
+    * 我们之前讨论过二叉树的直径，也就是分而治之
+    
