update: dsa 34.md

--- a/dsa/contents/34.md
+++ b/dsa/contents/34.md
@@ -224,14 +224,63 @@ void Graph<Tv, Te>::BFS(int v, int & clock) {
 </div>
 
 - 而同样可知，图中心点的偏心距就是图的半径(Radius)
-- 总结一下
-      * 计算图中任何一点的偏心距，只要对其做一次BFS即可找出
-      * 计算图中的中心点，需要计算图中所有点的偏心距，找到最小的偏心距所对应的点
-      * 计算图中的半径，中心点所对应的偏心距即为半径
 - 最后，我们需要了解一下如何找到图中的直径(Diameter)
     * 对于圆来说，它的半径恰好是自己直径的一半，反过来说直径是半径的两倍
     * 但是在图中的直径并不是这样的，至少不见得总是自己半径的两倍，那什么是图的直径呢
     * 其实就是图中距离最长的两个点之间的距离(或者说它们之间的那条通路)
     * 在实际中，我们讨论直径更多的应用于树结构上，毕竟树是一种特殊的图结构
     * 我们之前讨论过二叉树的直径，也就是分而治之
-    
+        * 根据树根，将一棵树分成两棵左右子树，我们分别计算左右子树的直径，这里要递归进行计算
+        * 然后树根去计算经过自己连通左右孩子的直径(其中左右孩子要确保各自的深度最大,也就是左右子树的高度)
+        * 找出三者的最大值即为该二叉树的直径：$d = max\{ d_L, d_R, h_L + h_R + 2 \}$
+        * 注意，上面的2是树根连接左右孩子的2条树干(枝)；L,R分别表示左右；d表示直径；h表示高度，这里很容易理解
+    * 如果不是二叉树，而是一般的树，这个分而治之的方法可行么
+        * 不失一般性，我们可以看下三叉树，每个孩子作为下面子树的树根
+        * 理论上这里可以分而治之来处理，逻辑上可以想得通，但是写起来非常麻烦，时间也不好控制
+    * 那么BFS能否取而代之呢，算法是这样的
+        * 从树的任何一个点，如s点来开始做一个BFS, 涟漪一圈一圈的传递出去，最终前锋面会灭掉，不再能传播，归于平静
+        * 我们需要计算在前锋面灭掉的最后一个点, 我们记为u, 接下来，把u作为火种，再进行一次BFS，找到u的灭点v
+        * 这里灭点的解释：在BFS模型中, u是s的灭点，v是u的灭点，s-u是s的偏心距，u-v是u的偏心距，这样很容易理解
+        * 在这里u-v就是这棵树的直径(Diameter)，其大小也就是u点的偏心距，其证明过程如下图
+        * 这样只需要2次BFS即可求出一般树的偏心距，其时间复杂度也是很低的
+        * $T(n) = 2 * O(n+e)$, n是所有的点, e是所有的边
+    * BFS找到直径的算法原理，证明如下图所示
+        * 1 ) 原理
+        * 做两次BFS，第一次BFS从s出发终于u点
+        * 接下来以终点u作为起点，又做一次BFS，假设它终止于v
+        * 这样u-v之间的路径就是直径
+        * 如图下图1所示
+        * 2 ) 证明
+        * 我们知道任意一棵树一定会有直径，也不见得只有一条，应该说至少有一条
+        * 这里使用反证法，如果原理是错的，假设下图x-y之间的路径是树的直径，它经过t点，如下图2所示
+        * 这个路径可能很长，中间点省略掉了，只画了关键几个点
+        * 这样的话，从s出发，做了一次BFS，最终终止于u，还是从u出发做BFS都会跳过x-y路径
+        * 那么，s做的BFS到u的通路是否和所谓的x-y的直径存在交点：要么有，要么没有
+            * 如果有，不失一般性，如s-t-u这样的通路，而t是x-y上的一点，如下图3所示
+                * 在s做BFS的时候灭点是u，前锋面一定波及到x-y路径
+                * 显然，s-u > s-x 并且 s-u > s-y, 显然 t-u > t-x 并且 t-u > t-y
+                * 这时候，x-u > x-y 并且 y-u > x-y
+                * 所以，x-y是直径，显然不合理！
+            * 如果没有，那么x,y所在的树不会落在s做的BFS中的u所在的子树中
+                * 也就是说，u所在子树和x,y所在子树的共同祖先是s, 如下图2所示
+                * 只有这样，才会出现s-u和x-y没有交集，但是作为连通图的一部分
+                * 当s在做第一次BFS的时候u是最终的灭点，所以会经过x-y上的任意一点, 也就是说会波及到这条路径
+                * 不失一般性，我们可以认为s在做BFS的时候，会经过t点，如果x-y是直径，按照下图3
+                * u作为最后出队的一点，也是最远的一点，这个最远不仅相对于x,也相对于y最远
+                * 也就是说 s-u > s-x > t-x 并且 s-u > s-y > t-y
+                * 这样的话 u-x > x-y 并且 u-y > x-y
+                * 如此，x-y是该树的直径，显然是荒谬的！
+        * 综上所述，从任意一点做两次BFS找到的路径确实是该树的直径
+
+<div align="center">
+    <img width="500" src="./screenshot/151.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 总结一下
+    * 计算图中任何一点的偏心距，只要对其做一次BFS即可找出
+    * 计算图中的中心点，需要计算图中所有点的偏心距，找到最小的偏心距所对应的点
+    * 计算图中的半径，中心点所对应的偏心距即为半径
+    * 计算树(特殊的图)中的直径，任意一点，进行2次BFS所得到的路径
