update: dsa 34.md

--- a/dsa/contents/34.md
+++ b/dsa/contents/34.md
@@ -284,3 +284,39 @@ void Graph<Tv, Te>::BFS(int v, int & clock) {
     * 计算图中的中心点，需要计算图中所有点的偏心距，找到最小的偏心距所对应的点
     * 计算图中的半径，中心点所对应的偏心距即为半径
     * 计算树(特殊的图)中的直径，任意一点，进行2次BFS所得到的路径
+
+**Knights of the Round Table**
+
+- 圆桌骑士案例中关于BFS应用，关于圆桌骑士
+    * 亚瑟王和骑士聚会，骑士平常的时候是生活在不同的区域
+    * 国土是由一个矩阵所构成的，矩阵是由一格一格的土地构成
+    * 矩阵中的空白处，没有画出来的地方，可以认为是沼泽地，山区等，不能落脚
+    * 我们假设有很多个骑士，亚瑟王希望把他们召集到一起，某一天来开个会
+    * 显然这里有一个原则，就是希望能找到一个公共的一个聚会的位置
+    * 从而使得他对所有骑士的召唤能够在最短的时间内实现
+- 这时候我们需要分析如何实现这类算法
+    * 不失一般性，我们先说就有两个骑士，如何召唤他们
+    * 这个问题本身就是可以转换成图的搜索问题，而且就是BFS
+    * 我们假设骑士就像国际象棋里的马，在这样一个矩阵中
+    * 一个马从任何一个位置出发，要到任何地方去，不能任性为之
+    * 国际象棋和中国象棋的马是一个走法，"日" 字，只有从日字的一个角到另一个角才是正确的走法
+    * 如果两个骑士分别是A,B，那么走到指定的聚会地点它们必须走日字型到达该点，而且每走一步都为一个日字型
+    * 亚瑟王为了骑士更快的聚到一起，应该选择最合适的地点作为聚会地点，也就是该点可以让所有骑士所走的总步数最小
+    * 这里基本的计算是每个骑士都要找到关于该点最短的路径，在这里我们知道这个最短路径就要用到我们的BFS
+    * 然后在这些最短路径中找到最长的路径，因为一个人或几个人聚会不是聚会，大家必须全了才叫聚会
+    * 在这些最短路径中找到最耗时，最长的路径，所花费的时间才是聚会的成本
+    * 所以方法是任何两个马，比如A,B，各自去计算一下到达任何一个拟定的聚会的位置，最快需要几步
+    * 有意思的是离自己最近的点，未必一步可以到，因为要走日字型，这个很好理解。
+    * 如下图中A周围的点中有相应的数字，这个数字就是A点到达该点需要的步数，这里的计算就是我们的BFS模型
+    * 很好想象这个模型是怎样铺展开的，这个蔓延不是像火燃烧那样，而是走马步蔓延，其邻居是马字型的邻居
+    * 这样走着走着，早晚一天会走无可走，前锋面会停下来，这时，还有一些格子是幸运的，没有被马踏过
+    * 如下图，绿色x格子就是马到不了的格子，自己可以去验证一下，而蓝色的可达地点也有一个最早到达的时间
+    * A和B两位骑士都会得到这么一个图，也就是2个骑士有两张图
+    * 亚瑟王在选地址的时候，要考虑2个骑士如何最快到达，在他拿到了2张图之后来进行衡量
+    * 他会怎么做呢，实际上，亚瑟王很聪明，它会把两张图合并起来
+    * 在每个格子上基于2张图取一个最大的值，比如最底部的4旁边的各自，两张图分别是1,5, 最后取值为5
+    * 所有格子在自己图上取最小的，合起来后取最大的，这个很好理解，最后的一步是
+    * 亚瑟王在这张合并的新图上找到值最小的格子，这个格子就是两位骑士最终聚会的地点
+    * 如图中的黄色2格子，这个格子就是当前聚会模型中最优的点，只需要2步的单位即可召集起2位骑士
+    * 同理，3个，4个，10个，100个，1w个骑士, 原理是一样的，都是这么来处理
+    * 这里最基本的算法是BFS
