update: dsa 34.md

--- a/dsa/contents/34.md
+++ b/dsa/contents/34.md
@@ -186,13 +186,13 @@ void Graph<Tv, Te>::BFS(int v, int & clock) {
 **Graph/Tree: Eccentricity/Radius/Center/Diameter**
 
 - 对于图来说，还有一些概念比较重要
-    * Eccentricity 偏心距
-    * Radius 半径
-    * Center 中心
-    * Diameter 直径
+    * 1.Eccentricity 偏心距
+    * 2.Radius 半径
+    * 3.Center 中心
+    * 4.Diameter 直径
 - 上述的概念是在圆中的概念，我们可以把它应用在图内
 - 基于BFS的平摊桌面模型，它的骨架实际是一棵树，节点之间的一些跨边被我们扔掉了
-- 这个时候对于任何一个节点来说，我们都可以来讨论他的偏心距(Eccentricity)
+- 这个时候对于任何一个节点来说，我们都可以来讨论他的**偏心距(Eccentricity)**
     * 如果一张图上的中心点在某个节点上，比如O点，对于任意一个节点A来说，它都有个偏心距
     * 直觉上，我们认为的偏心距应该是|OA|的距离，但是在图上并不好由此来测度，我们需要找一个替代的东西
     * 我们可以以A为起点做一趟BFS, 就相当于从A点扔一个火源，让其自行燃烧
@@ -205,7 +205,7 @@ void Graph<Tv, Te>::BFS(int v, int & clock) {
     * 我们就把这样的一段传播距离，按照BFS模型，从A到T的传播距离，就记做偏心距(Eccentricity)
     * 同时我们可以看到越是偏离图的中心，它的偏心距越长，这就是我们在图上的偏心距，一种替代方案
     * 所以，任何一个点只要对它做一次BFS就会计算出它的偏心距
-- 同样的，我们可以讨论图上的中心(Center)
+- 同样的，我们可以讨论图上的**中心(Center)**
     * 从人类直觉上来说，圆的中心就是最中心的那个点
     * 对于图来说，我们可以认为偏心距最小的点就是图的中心
     * 所以，对于图来说，它的中心很可能并不唯一
@@ -223,8 +223,8 @@ void Graph<Tv, Te>::BFS(int v, int & clock) {
     <br />
 </div>
 
-- 而同样可知，图中心点的偏心距就是图的半径(Radius)
-- 最后，我们需要了解一下如何找到图中的直径(Diameter)
+- 而同样可知，图中心点的偏心距就是图的**半径(Radius)**
+- 最后，我们需要了解一下如何找到图中的**直径(Diameter)**
     * 对于圆来说，它的半径恰好是自己直径的一半，反过来说直径是半径的两倍
     * 但是在图中的直径并不是这样的，至少不见得总是自己半径的两倍，那什么是图的直径呢
     * 其实就是图中距离最长的两个点之间的距离(或者说它们之间的那条通路)
@@ -245,12 +245,12 @@ void Graph<Tv, Te>::BFS(int v, int & clock) {
         * 这样只需要2次BFS即可求出一般树的偏心距，其时间复杂度也是很低的
         * $T(n) = 2 * O(n+e)$, n是所有的点, e是所有的边
     * BFS找到直径的算法原理，证明如下图所示
-        * 1 ) 原理
+        * 1 ) **原理**
         * 做两次BFS，第一次BFS从s出发终于u点
         * 接下来以终点u作为起点，又做一次BFS，假设它终止于v
         * 这样u-v之间的路径就是直径
         * 如图下图1所示
-        * 2 ) 证明
+        * 2 ) **证明**
         * 我们知道任意一棵树一定会有直径，也不见得只有一条，应该说至少有一条
         * 这里使用反证法，如果原理是错的，假设下图x-y之间的路径是树的直径，它经过t点，如下图2所示
         * 这个路径可能很长，中间点省略掉了，只画了关键几个点
@@ -279,7 +279,7 @@ void Graph<Tv, Te>::BFS(int v, int & clock) {
     <br />
 </div>
 
-- 总结一下
+- **总结一下**
     * 计算图中任何一点的偏心距，只要对其做一次BFS即可找出
     * 计算图中的中心点，需要计算图中所有点的偏心距，找到最小的偏心距所对应的点
     * 计算图中的半径，中心点所对应的偏心距即为半径
@@ -320,3 +320,10 @@ void Graph<Tv, Te>::BFS(int v, int & clock) {
     * 如图中的黄色2格子，这个格子就是当前聚会模型中最优的点，只需要2步的单位即可召集起2位骑士
     * 同理，3个，4个，10个，100个，1w个骑士, 原理是一样的，都是这么来处理
     * 这里最基本的算法是BFS
+
+<div align="center">
+    <img width="600" src="./screenshot/152.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
