update: dsa 34.md

--- a/dsa/contents/34.md
+++ b/dsa/contents/34.md
@@ -285,11 +285,12 @@ void Graph<Tv, Te>::BFS(int v, int & clock) {
     * 计算图中的半径，中心点所对应的偏心距即为半径
     * 计算树(特殊的图)中的直径，任意一点，进行2次BFS所得到的路径
 
-**Knights of the Round Table**
+**Knights of the Round Table 圆桌骑士**
 
-- 圆桌骑士案例中关于BFS应用，关于圆桌骑士
+- 圆桌骑士案例中关于BFS应用，关于圆桌骑士的故事
     * 亚瑟王和骑士聚会，骑士平常的时候是生活在不同的区域
     * 国土是由一个矩阵所构成的，矩阵是由一格一格的土地构成
+    * 我们所说的圆桌代指聚会所用的圆桌，国土是矩形的，两码事，这里特别说明一下
     * 矩阵中的空白处，没有画出来的地方，可以认为是沼泽地，山区等，不能落脚
     * 我们假设有很多个骑士，亚瑟王希望把他们召集到一起，某一天来开个会
     * 显然这里有一个原则，就是希望能找到一个公共的一个聚会的位置
@@ -314,7 +315,7 @@ void Graph<Tv, Te>::BFS(int v, int & clock) {
     * A和B两位骑士都会得到这么一个图，也就是2个骑士有两张图
     * 亚瑟王在选地址的时候，要考虑2个骑士如何最快到达，在他拿到了2张图之后来进行衡量
     * 他会怎么做呢，实际上，亚瑟王很聪明，它会把两张图合并起来
-    * 在每个格子上基于2张图取一个最大的值，比如最底部的4旁边的各自，两张图分别是1,5, 最后取值为5
+    * 在每个格子上基于2张图取一个最大的值，比如最底部的4旁边的格子，两张图分别是1,5, 最后取值为5
     * 所有格子在自己图上取最小的，合起来后取最大的，这个很好理解，最后的一步是
     * 亚瑟王在这张合并的新图上找到值最小的格子，这个格子就是两位骑士最终聚会的地点
     * 如图中的黄色2格子，这个格子就是当前聚会模型中最优的点，只需要2步的单位即可召集起2位骑士
