update: dsa 35.md

--- a/dsa/contents/35.md
+++ b/dsa/contents/35.md
@@ -31,7 +31,7 @@
     * 于是就剩下最后一个方向了，如下图11所示，继续往前走，到达拐点，如图12所示，紧接着发现还有3条可选的路
     * 继续按着以往的策略任选一条，如下图13，14，15，到达图16的时候，又会标记一条CROSS边，如图17
     * 继续做回退，当到达E点的时候，发现又可以往前走，最终到达一个死胡同，如图19所示，这样只能继续回退一直到初始红点A
-    * 然后对新发现的Cross边进行标记，如图20，到这个时候，整个遍历完成
+    * 然后对新发现的CROSS边进行标记，如图20，到这个时候，整个遍历完成
 
 <div align="center">
     <img width="700" src="./screenshot/153.jpg">
