update: dsa 35.md

--- a/dsa/contents/35.md
+++ b/dsa/contents/35.md
@@ -46,7 +46,8 @@
 template <typename Tv, typename Te> // 顶点类型、边类型
 
 void Graph<Tv, Te>:: DFS(int v, int & clock) {
-    dTime(v) = ++clock; status(v) = DISCOVERED; // 发现当前顶点v
+    dTime(v) = ++clock; 
+    status(v) = DISCOVERED; // 发现当前顶点v
     // 考察v的每一邻居u
     for (int u = firstNbr(v); -1 < u; u = nextNbr(v,u)) {
         // 视u的状态，分别处理
@@ -68,3 +69,14 @@ void Graph<Tv, Te>:: DFS(int v, int & clock) {
     fTime(v) = ++clock; // 至此，当前顶点v方告访问完毕
 }
 ```
+
+### DFS算法步骤图解
+
+<div align="center">
+    <img width="700" src="./screenshot/154.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 
