update: javascript 94.md

--- a/javascript/contents/94.md
+++ b/javascript/contents/94.md
@@ -4,7 +4,7 @@
 > 一个或多个观察者对目标状态感兴趣，他们通过将自己依附于目标对象上以便注册所感兴趣的内容
 > 目标状态发生改变并且观察者可能对这些改变感兴趣，就会发送一个通知消息，调用每个观察者的更新方法
 > 当观察者不再对目标状态感兴趣时，他们可以简单地将自己从中分离
-> 在生活中，比如门户网站新闻发布，订阅网站客户接收消息
+> 在开发中，比如全选和反选按钮功能的实现，全/反选按钮为目标对象，子项checkbox为观察者
 
 ### 观察者模式作用
 
@@ -19,9 +19,12 @@
 ### 观察者模式示例
 
 ```html
+<!-- 用于向页面添加新可见chdckbox的按钮 -->
 <button id="addNewObserver">Add New Observer checkbox</button>
+<!-- 控制checkbox, 将充当一个目标，通知其他checkbox需要进行检查 -->
 <input id="mainCheckbox" type="checkbox" />
-<div id="observerContainer"></div>
+<!-- 用于添加新checkbox的容器 -->
+<div id="observersContainer"></div>
 
 <script>
     /***************** 一个目标可能拥有的一系列依赖Observer *****************/
@@ -111,7 +114,7 @@
     Subject.prototype.Notify = function(context) {
         var observerCount = this.observers.Count();
         for (var i = 0; i < observerCount; i++) {
-            this.observers.Get(i).Update(content);
+            this.observers.Get(i).Update(context);
         }
     }
 
@@ -122,22 +125,21 @@
         }
     }
 
-
     // 业务逻辑开始
+    // 页面上的dom元素
     var controlCheckbox = document.getElementById("mainCheckbox"),
         addBtn = document.getElementById("addNewObserver"),
         container = document.getElementById("observersContainer");
 
     // 具体目标 Concrete Subject
-    // 利用Subject扩展controlCheckbox
-    extend(new Subject(), controlCheckbox);
+    extend(new Subject(), controlCheckbox); // 利用Subject扩展controlCheckbox
+    
     // 点击checkbox 会触发通知到观察者上
     controlCheckbox['onclick'] = new Function("controlCheckbox.Notify(controlCheckbox.checked)");
 
     addBtn["onclick"] = AddNewObserver;
 
     // 具体观察者 Concrete Observer
-
     function AddNewObserver() {
         // 创建需要添加的新 checkbox
         var check = document.createElement("input");
@@ -154,7 +156,7 @@
         // 为主subject的观察者列表添加新的观察者
         controlCheckbox.AddObserver(check);
 
-        // 将观察者附件到容器上
+        // 将观察者附件到容器上 Dom操作
         container.appendChild(check);
     }
 </script>
