update: dsa 35.md

--- a/dsa/contents/35.md
+++ b/dsa/contents/35.md
@@ -46,29 +46,33 @@
 template <typename Tv, typename Te> // 顶点类型、边类型
 
 void Graph<Tv, Te>:: DFS(int v, int & clock) {
-    dTime(v) = ++clock; 
+    // v是起点，clock是计时器，dTime为每个点都加上时间戳
+    dTime(v) = ++clock;
     status(v) = DISCOVERED; // 发现当前顶点v
-    // 考察v的每一邻居u
+    // 考察v的每一邻居u，枚举所有的邻居，这里的邻居都是当前节点的孩子节点
     for (int u = firstNbr(v); -1 < u; u = nextNbr(v,u)) {
         // 视u的状态，分别处理
         switch(status(u)) {
-            case UNDISCOVERED: // u 尚未发现，意味着支撑树可在此拓展
-                type(v, u) = TREE;
-                parent(u) = v;
-                DFS(u, clock); // 递归
+            case UNDISCOVERED: // u 尚未发现，意味着支撑树可在此拓展 (类比BFS的初始植被状态)
+                type(v, u) = TREE; // 树枝向前迈进
+                parent(u) = v; // 从v到孩子u之间的关系
+                DFS(u, clock); // 新的起点，开始递归，向孩子节点进发，贪心处理
                 break;
-            case DISCOVERED: // u 已被发现但尚未访问完毕，应属被后代指向的祖先
-                type(v, u) = BACKWARD;
+            case DISCOVERED: // u 已被发现但尚未访问完毕，应属被后代指向的祖先 (类比BFS的燃烧状态)
+                type(v, u) = BACKWARD; // 这是一条回边，进行标记处理
                 break;
-            default: // u已访问完毕(VISITED, 有向图)，则视承袭关系分为前向边或跨边
+            default: // u已访问完毕(VISITED, 有向图)，则视承袭关系分为前向边或跨边 (类比BFS的灰烬状态)
+                // 通过时间戳来判断是向前边还是跨边
                 type(v,u) = dTime(v) < dTime(u) ? FORWARD : CROSS;
                 break;
         }
     }
-    status(v) = VISITED;
-    fTime(v) = ++clock; // 至此，当前顶点v方告访问完毕
+    status(v) = VISITED; // 处理完所有孩子节点之后，标记自己为已访问
+    fTime(v) = ++clock; // 至此，当前顶点v方告访问完毕，fTime是指结束时间
 }
 ```
+
+- 我们可以看到上述算法中有4种边：TREE、FORWARD、BACKWARD、CROSS
 
 ### DFS算法步骤图解
 
