update: dsa 35.md

--- a/dsa/contents/35.md
+++ b/dsa/contents/35.md
@@ -120,3 +120,34 @@ void Graph<Tv, Te>:: DFS(int v, int & clock) {
 - 这个情况之前也碰到过，如a试图连接c, 但不同的是，dTime(g) < dTime(c), 这时候g->c就是一条CROSS边
 - 所谓CROSS边的理解是共同祖先如a点的不同直系分支下的点，g和c不构成直系的血缘关系，可能是叔伯兄弟的关系
 - 也就是跨越两个家族之间的边就是CROSS边，这个算法可以继续跑下去，直到最后
+
+**DFS的一些性质**
+
+<div align="center">
+    <img width="700" src="./screenshot/155.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 基于DFS解决实际问题的算法
+
+
+- DFS是基于一个非常简单策略支撑下的一个算法，但背后蕴含了非常深刻的道理甚至是哲学思想
+- 注意上图中左右两部分，其中右边又分为上下两部分，注意图中箭头的颜色，DFS有四种边
+- 粉红色代表FORWARD，绿色代表TREE，蓝色代表BACKWARD，黄色代表CROSS边
+- 按照DFS模型，从a点开始会生成一棵树, 但是在这个有向图中并没有耗尽所有的点，比如d，e
+- 所以，在有向图中选择不同的点作为起点，可能走的过程会不一样，而且得到的DFS树也不一样
+- 有的时候是一片森林(多棵树，比如从a点开始)，有的时候是一棵树(比如从d点开始)
+- DFS出来的结果更多的时候出来的是一片森林，我们想从中找出一些不变的性质
+- 其中dTime和fTime这对时间戳有非常显著的意义, 通过它们可以把每个点画成一个更长的一个矩形
+- 如上图右边部分，横向可以表示程序中clock所走的时间轴，如上图1~14
+- 任何一点，比如a，它是1~10这个范围(dTime是1,fTime是10)，在图上表示就是跨越1和10的圆角蓝色矩形，如上图所示
+- 再比如，f是6~9，同理是一个跨越6~9范围的圆角蓝色矩形；按照这个规则约定，我们画出了上图
+- 重点说一下上图右上部分的d点，它是从11开始的，所以，它的后代也都会在11以后
+- 我们把蓝色的范围称之为该点的活跃期, 从开始到死亡的周期, 从上图可以看到，任何一个祖先的活跃期一定覆盖它所有的后代节点
+- 比如所a的任意一个后代节点，f点的活跃期一定在a点之内，这个关系是几何图形上的关系，从图中很容易理解
+- 打个比方说在DFS这个舞台上，无时无刻都在上演一出白发人送黑发人的剧情，祖先先出生，最后再离开
+- 在所有的非直系的DFS树中，比如b和f，它们的活跃期永远不会出现重叠，再比如：c和f,g和b
+- 通过这个特点，方便我们判断任意两点之间是否直系的血缘关系
+- 比较活跃期这个方法，只需要一次比较，也就是O(1)的时间，如果按照回溯的方式，显然比较麻烦
