update: dsa 35.md

--- a/dsa/contents/35.md
+++ b/dsa/contents/35.md
@@ -121,7 +121,7 @@ void Graph<Tv, Te>:: DFS(int v, int & clock) {
 - 所谓CROSS边的理解是共同祖先如a点的不同直系分支下的点，g和c不构成直系的血缘关系，可能是叔伯兄弟的关系
 - 也就是跨越两个家族之间的边就是CROSS边，这个算法可以继续跑下去，直到最后
 
-**DFS的一些性质**
+### DFS的一些性质
 
 <div align="center">
     <img width="700" src="./screenshot/155.jpg">
@@ -129,9 +129,6 @@ void Graph<Tv, Te>:: DFS(int v, int & clock) {
     <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
     <br />
 </div>
-
-- 基于DFS解决实际问题的算法
-
 
 - DFS是基于一个非常简单策略支撑下的一个算法，但背后蕴含了非常深刻的道理甚至是哲学思想
 - 注意上图中左右两部分，其中右边又分为上下两部分，注意图中箭头的颜色，DFS有四种边
@@ -151,3 +148,8 @@ void Graph<Tv, Te>:: DFS(int v, int & clock) {
 - 在所有的非直系的DFS树中，比如b和f，它们的活跃期永远不会出现重叠，再比如：c和f,g和b
 - 通过这个特点，方便我们判断任意两点之间是否直系的血缘关系
 - 比较活跃期这个方法，只需要一次比较，也就是O(1)的时间，如果按照回溯的方式，显然比较麻烦
+
+
+**基于DFS解决实际问题的算法**
+
+1 ) Topological Sorting 拓扑排序
