update: dsa 35.md

--- a/dsa/contents/35.md
+++ b/dsa/contents/35.md
@@ -140,7 +140,7 @@ void Graph<Tv, Te>:: DFS(int v, int & clock) {
 - 其中dTime和fTime这对时间戳有非常显著的意义, 通过它们可以把每个点画成一个更长的一个矩形
 - 如上图右边部分，横向可以表示程序中clock所走的时间轴，如上图1~14
 - 任何一点，比如a，它是1~10这个范围(dTime是1,fTime是10)，在图上表示就是跨越1和10的圆角蓝色矩形，如上图所示
-- 再比如，f是6~9，同理是一个跨越6~9范围的圆角蓝色矩形；按照这个规则约定，我们画出了上图
+- 再比如，f是6~9，同理是一个跨越6~9范围的圆角蓝色矩形, 按照这个规则约定，我们画出了上图
 - 重点说一下上图右上部分的d点，它是从11开始的，所以，它的后代也都会在11以后
 - 我们把蓝色的范围称之为该点的活跃期, 从开始到死亡的周期, 从上图可以看到，任何一个祖先的活跃期一定覆盖它所有的后代节点
 - 比如所a的任意一个后代节点，f点的活跃期一定在a点之内，这个关系是几何图形上的关系，从图中很容易理解
@@ -149,7 +149,65 @@ void Graph<Tv, Te>:: DFS(int v, int & clock) {
 - 通过这个特点，方便我们判断任意两点之间是否直系的血缘关系
 - 比较活跃期这个方法，只需要一次比较，也就是O(1)的时间，如果按照回溯的方式，显然比较麻烦
 
-
 **基于DFS解决实际问题的算法**
 
 1 ) Topological Sorting 拓扑排序
+
+<div align="center">
+    <img width="600" src="./screenshot/156.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 这个问题和拓扑没有直接的关系，它是一个离散的关系
+- 首先看一下这个图，实际上是我们学习数据结构与算法的一个知识顺序图
+- 通过箭头表示知识点的依赖关系，A->C表示要学习C就要先学习A, A是预备知识
+- 一般在编写教材的时候要有一个顺序可以让读者能够轻松地看下来，不会因为某一项知识的缺乏导致无法理解
+- 有的时候，比如要学习D,就要先学好A和C这样，在编写目录的时候，A和C一定要在D的前面开始
+- 最下面的横向图可以理解为目录的组织结构
+- 话说回来，任何一个知识体系，其实并不能做到像直线这样的排列，因为很多知识都是平行并列的发生，没有先后之分
+- 作为理想的情况，我们可以把知识体系抽象为上面ABCD...这样一个有向图结构
+- 我们需要写一个算法来判断是否可以，把这些知识体系排成一个序列使得原来的边都是从前指向后这样的目录关系，而不会倒过来发生
+- 如何来做呢？下面我们来说下
+
+2 ) Topological Sorting: In-Degree
+
+<div align="center">
+    <img width="600" src="./screenshot/157.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 在一个有依托关系的有向图中，必然会出现至少一个点是0入度的点(其Incoming Degree是0，没有Incoming Edge)
+- 比如上图的A和B, A和B都是一本书的预备基础知识，找到0入度的点就是我们算法的着眼点
+- 如果没有0入度的点，那么每一个点都要依赖其他的点，这样的话就会出现一个死循环就无法进行拓扑排序
+- 如果有0入度的点，任择其一，比如选择A点，准备一个栈来记录(存放)，等效的来说，处理完A点之后
+- 可以认为A点不存在, 打个比方，第一学期之后，假装没有第一学期，从第二学期开始学习，也就是过河拆桥
+- 如果这个过程还能持续下去，到C点之前，还需要一个0入度的点即B点, 处理完B之后，将B忘掉
+- 这时候到了C点了，等效于C点是一个0入度的点, 把C取出记录到栈中去，按照这种方式直到最后将所有学期的课程都排好
+- 所有的课程都会排列到一个倒序的栈中，自底而上，这是一种解决方案，但还不是很高明
+- 如何才能更高明的处理呢? 我们下面来谈
+
+3 ) Topological Sorting: Out Degree + DFS
+
+<div align="center">
+    <img width="600" src="./screenshot/158.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 以终为始，我们要思考最后一个点应该是怎样的，换句话说，大学中最后一学期应该学什么课程
+- 如果大学课程是合理的，可以进行拓扑排序的话，那么最后一门课必然存在, 没有任何一门课依赖于它
+- 它应该不作为任何一门课程的先修课(预备课)，用专业术语来说，它的Out Going Degree是0(没有发出的边)
+- 如何发现这类点，如果用之前一个个找出来删掉来倒序排列就显得很愚笨了，其实通过一次DFS即可发现
+- 从任何一点出发，不失一般性，比如从C点开始最终会到达一个点, 假如第一步到达D点，之后立即回溯并入栈
+- 回到了C点又有多种选择, 它可以到E，然后到F, 这时候F开始回溯并入栈，然后从E继续进行回溯并入栈
+- 之后又一次回到了C点, C点无路可走随机也入栈，这个过程中逐步回溯，每一次回溯从效果上来看等效于回溯点不存在
+- 我们的原则是一旦回溯就要把它push到栈中去，如果这里只有CDEF几个点的话，那么CEFD就是大学中正确学习的一个有效次序
+- 这时候，我们可以看到还有A和B没有处理，没有关系，我们可以继续DFS, 比如从B再次开始，B在这个有向图中是祖先
+- B->C这条边是FORWARD边, 做了一次标记，随机进行回溯并入栈，这时候还剩下A点，对A继续进行BFS
+- 同理，A标记之后也会随即入栈，我们可以看到最后的这两步，A和B的次序是可以颠倒的，没有关系
+- 从任意一点开始，按照这种算法都可以得到很多种解决方案，Begin With End In Mind 始终记住以终为始的哲学思想
